--- a/ts-paint/src/app/components/palette/palette.component.less
+++ b/ts-paint/src/app/components/palette/palette.component.less
@@ -1,6 +1,6 @@
 @import 'variables';
 
-.tsp-palette__color-selector{
+.tsp-palette__color-selector {
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
@@ -8,28 +8,28 @@
   margin: 9px 4px 9px;
 }
 
-.tsp-palette__selected-color-container{
-  border: 1px solid #C3C7CB;
+.tsp-palette__selected-color-container {
+  border: 1px solid #c3c7cb;
 }
 
-.tsp-palette__color-button{
+.tsp-palette__color-button {
   width: 12px;
   height: 12px;
   padding: 0px;
 }
 
-.tsp-palette__color-sample{
+.tsp-palette__color-sample {
   width: 11px;
   height: 11px;
 }
 
-.tsp-palette__color-sample-container{
+.tsp-palette__color-sample-container {
   width: 13px;
   height: 13px;
   position: absolute;
 }
 
-.tsp-palette__selected-colors-parent{
+.tsp-palette__selected-colors-parent {
   width: 27px;
   height: 28px;
   padding: 0px;
