--- a/ts-paint/src/app/components/selection-frame/selection-frame.component.html
+++ b/ts-paint/src/app/components/selection-frame/selection-frame.component.html
@@ -1,3 +1,11 @@
-<canvas class="tsp-selection-frame__frame" #imageCanvas
-  [ngStyle]="{'width': zoomedWidth+'px', 'height': zoomedHeight+'px', 'left': zoomedOffsetW+'px', 'top': zoomedOffsetH+'px'}">
+<canvas
+  class="tsp-selection-frame__frame"
+  #imageCanvas
+  [ngStyle]="{
+    width: zoomedWidth + 'px',
+    height: zoomedHeight + 'px',
+    left: zoomedOffsetW + 'px',
+    top: zoomedOffsetH + 'px'
+  }"
+>
 </canvas>
