--- a/ts-paint/src/variables.less
+++ b/ts-paint/src/variables.less
@@ -1,5 +1,5 @@
-@color--lightest-grey: #E1E3E5;
-@color--lighter-grey: #C3C7CB;
-@color--grey: #868A8E;
+@color--lightest-grey: #e1e3e5;
+@color--lighter-grey: #c3c7cb;
+@color--grey: #868a8e;
 
-@color--dark-blue: #0000AA;
+@color--dark-blue: #0000aa;
