--- a/ts-paint/src/app/components/footer-info/footer-info.component.less
+++ b/ts-paint/src/app/components/footer-info/footer-info.component.less
@@ -1,30 +1,30 @@
 @import 'variables';
 
-:host(tsp-footer-info){
+:host(tsp-footer-info) {
   display: flex;
   width: 100%;
 }
 
-:host(tsp-footer-info>div){
+:host(tsp-footer-info > div) {
   margin: 1px;
   padding-top: 6px;
   height: 13px;
 }
 
-.tsp-footer-info__help{
+.tsp-footer-info__help {
   overflow: hidden;
   padding-left: 2px;
 }
 
-.tsp-footer-info__coordinates{
+.tsp-footer-info__coordinates {
   width: 95px;
   padding-left: 18px;
 }
 
-.tsp-footer-info__coordinates--shape-start{
-  background: url("../../../assets/icons/shapeStart.png") no-repeat;
+.tsp-footer-info__coordinates--shape-start {
+  background: url('../../../assets/icons/shapeStart.png') no-repeat;
 }
 
-.tsp-footer-info__coordinates--shape-dimensions{
-  background: url("../../../assets/icons/shapeDimensions.png") no-repeat;
+.tsp-footer-info__coordinates--shape-dimensions {
+  background: url('../../../assets/icons/shapeDimensions.png') no-repeat;
 }
