--- a/ts-paint/src/app/components/mouse-tracker/mouse-tracker.component.less
+++ b/ts-paint/src/app/components/mouse-tracker/mouse-tracker.component.less
@@ -1,10 +1,10 @@
-:host(tsp-mouse-tracker){
+:host(tsp-mouse-tracker) {
   position: relative;
   height: 100%;
   width: fit-content;
 }
 
-.tsp-mouse-tracker__div{
+.tsp-mouse-tracker__div {
   position: relative;
-  cursor: url("../../../assets/cursors/lineCursor.png") 10 10, auto;
+  cursor: url('../../../assets/cursors/lineCursor.png') 10 10, auto;
 }
