--- a/ts-paint/src/app/components/toolbox/toolbox.component.less
+++ b/ts-paint/src/app/components/toolbox/toolbox.component.less
@@ -1,13 +1,13 @@
 @import 'variables';
 
-:host(tsp-toolbox){
+:host(tsp-toolbox) {
   width: 50px;
   padding-top: 2px;
   margin-left: 5px;
-  margin-right: 3px
+  margin-right: 3px;
 }
 
-.tsp-toolbox__button{
+.tsp-toolbox__button {
   width: 24px;
   height: 24px;
   padding: 0;
@@ -17,11 +17,11 @@
   background-position: center;
 }
 
-.tsp-toolbox__button:active{
+.tsp-toolbox__button:active {
   background-position: calc(50% + 2px) calc(50% + 2px) !important;
 }
 
-.tsp-toolbox__button--selected{
+.tsp-toolbox__button--selected {
   margin: 0 0 -1px 1px;
   border-width: 1px 2px 1px 1px;
   border-color: @color--grey @color--lighter-grey @color--lighter-grey @color--grey;
@@ -38,34 +38,34 @@
   border-color: black white white black;
 }
 
-.tsp-toolbox__button--lineIcon{
-  background-image: url("../../../assets/icons/line.png");
+.tsp-toolbox__button--lineIcon {
+  background-image: url('../../../assets/icons/line.png');
 }
 
-.tsp-toolbox__button--pencilIcon{
-  background-image: url("../../../assets/icons/pencil.png");
+.tsp-toolbox__button--pencilIcon {
+  background-image: url('../../../assets/icons/pencil.png');
 }
 
-.tsp-toolbox__button--rectangleIcon{
-  background-image: url("../../../assets/icons/rectangle.png");
+.tsp-toolbox__button--rectangleIcon {
+  background-image: url('../../../assets/icons/rectangle.png');
 }
 
-.tsp-toolbox__button--colorPickerIcon{
-  background-image: url("../../../assets/icons/colorPicker.png");
+.tsp-toolbox__button--colorPickerIcon {
+  background-image: url('../../../assets/icons/colorPicker.png');
 }
 
-.tsp-toolbox__button--colorFillerIcon{
-  background-image: url("../../../assets/icons/colorFiller.png");
+.tsp-toolbox__button--colorFillerIcon {
+  background-image: url('../../../assets/icons/colorFiller.png');
 }
 
-.tsp-toolbox__button--rectangleSelectIcon{
-  background-image: url("../../../assets/icons/rectangleSelect.png");
+.tsp-toolbox__button--rectangleSelectIcon {
+  background-image: url('../../../assets/icons/rectangleSelect.png');
 }
 
-.tsp-toolbox__button--magnifierIcon{
-  background-image: url("../../../assets/icons/magnifier.png");
+.tsp-toolbox__button--magnifierIcon {
+  background-image: url('../../../assets/icons/magnifier.png');
 }
 
-.tsp-toolbox__button--ellipseIcon{
-  background-image: url("../../../assets/icons/ellipse.png");
+.tsp-toolbox__button--ellipseIcon {
+  background-image: url('../../../assets/icons/ellipse.png');
 }
