--- a/ts-paint/src/app/components/zoomable-canvas/zoomable-canvas.component.html
+++ b/ts-paint/src/app/components/zoomable-canvas/zoomable-canvas.component.html
@@ -1,3 +1,11 @@
-<canvas class="tsp-zoomable-canvas__canvas" #imageCanvas
-  [ngStyle]="{'width': zoomedWidth+'px', 'height': zoomedHeight+'px', 'left': zoomedOffsetW+'px', 'top': zoomedOffsetH+'px'}">
+<canvas
+  class="tsp-zoomable-canvas__canvas"
+  #imageCanvas
+  [ngStyle]="{
+    width: zoomedWidth + 'px',
+    height: zoomedHeight + 'px',
+    left: zoomedOffsetW + 'px',
+    top: zoomedOffsetH + 'px'
+  }"
+>
 </canvas>
