Styling for radio buttons and flip/rotate window

--- a/ts-paint/src/app/components/inputs/integer-input/integer-input.component.html
+++ b/ts-paint/src/app/components/inputs/integer-input/integer-input.component.html
@@ -5,6 +5,7 @@
     type="text"
     class="tsp-text-input tsp-depressed-item"
     [(ngModel)]="model"
+    [attr.disabled]="disabled ? '' : null"
     (paste)="onPaste($event)"
     (keydown)="onKeydown($event)"
   />
