--- a/ts-paint/src/styles.less
+++ b/ts-paint/src/styles.less
@@ -62,6 +62,12 @@ hr {
   border-color: @color--grey white white @color--grey;
 }
 
+fieldset {
+  border: 1px solid;
+  border-color: @color--grey white white @color--grey;
+  padding: 3px 4px 5px 4px;
+}
+
 .tsp-button {
   &:extend(.tsp-raised-item);
   position: relative;
@@ -115,4 +121,24 @@ div.tsp-button {
   padding-bottom: 5px;
   padding-left: 2px;
   outline: none;
+}
+
+.tsp-radio-button {
+  position: relative;
+  margin-right: 18px;
+  width: 0px;
+  height: 0px;
+}
+
+.tsp-radio-button::before {
+  content: ' ';
+  width: 12px;
+  height: 12px;
+  position: absolute;
+  background-image: url('./assets/ui/radio-unchecked.png');
+  top: -2px;
+}
+
+.tsp-radio-button:checked::before {
+  background-image: url('./assets/ui/radio-checked.png');
 }
