--- a/ts-paint/src/app/views/ts-paint/ts-paint.component.html
+++ b/ts-paint/src/app/views/ts-paint/ts-paint.component.html
@@ -1,9 +1,4 @@
-<tsp-modal-window
-  [title]="store.state.fileName + ' - Paint'"
-  [fullscreen]="true"
-  [icon]="'paint'"
-  (paste)="onPaste($event)"
->
+<tsp-modal-window [title]="store.state.fileName + ' - Paint'" [fullscreen]="true" [icon]="'paint'">
   <div class="tsp-vertical-bar">
     <div class="tsp-horizontal-bar">
       <tsp-menu [menuStructure]="store.state.menuStructure" (itemSelected)="store.executeMenuAction($event.action)">
