Storing scrollPosition into state

--- a/ts-paint/src/app/views/ts-paint/ts-paint.component.html
+++ b/ts-paint/src/app/views/ts-paint/ts-paint.component.html
@@ -18,6 +18,7 @@
         <div
           class="tsp-depressed-item tsp-can-grow tsp-ts-paint__image_scroller"
           (contextmenu)="$event.preventDefault()"
+          (scroll)="onScroll($event)"
         >
           <div class="tsp-ts-paint__image-padding">
             <tsp-zoomable-canvas [zoom]="store.state.zoom" [image]="store.state.image"></tsp-zoomable-canvas>
