Setting scrollPosition from store

--- a/ts-paint/src/app/views/ts-paint/ts-paint.component.html
+++ b/ts-paint/src/app/views/ts-paint/ts-paint.component.html
@@ -16,6 +16,7 @@
       </div>
       <div class="tsp-depressed-item-container tsp-vertical-bar tsp-can-grow">
         <div
+          #imageScroller
           class="tsp-depressed-item tsp-can-grow tsp-ts-paint__image_scroller"
           (contextmenu)="$event.preventDefault()"
           (scroll)="onScroll($event)"
