Added option of inverted preview

--- a/ts-paint/src/app/components/zoomable-canvas/zoomable-canvas.component.html
+++ b/ts-paint/src/app/components/zoomable-canvas/zoomable-canvas.component.html
@@ -7,5 +7,6 @@
     left: zoomedOffsetW + 'px',
     top: zoomedOffsetH + 'px'
   }"
+  [ngClass]="{ 'tsp-zoomable-canvas__canvas--invert_background': invertBackground }"
 >
 </canvas>
