--- a/ts-paint/src/app/components/zoomable-canvas/zoomable-canvas.component.less
+++ b/ts-paint/src/app/components/zoomable-canvas/zoomable-canvas.component.less
@@ -6,3 +6,7 @@
   image-rendering: pixelated;
   position: absolute;
 }
+
+.tsp-zoomable-canvas__canvas--invert_background {
+  mix-blend-mode: difference;
+}
