Finished implementation of scrolling magnifier with preview

--- a/ts-paint/src/app/views/ts-paint/ts-paint.component.html
+++ b/ts-paint/src/app/views/ts-paint/ts-paint.component.html
@@ -18,6 +18,7 @@
         <tsp-image-scroller
           class="tsp-depressed-item tsp-can-grow"
           [scrollPosition]="store.state.scrollPosition"
+          (contextmenu)="$event.preventDefault()"
           (scrollPositionChange)="this.store.setScrollPosition($event)"
           (viewportSizeChange)="this.store.setViewportSize($event)"
         >
