--- a/ts-paint/src/app/components/stretch-skew-window/stretch-skew-window.component.less
+++ b/ts-paint/src/app/components/stretch-skew-window/stretch-skew-window.component.less
@@ -1,5 +1,13 @@
+.tsp-stretch-skew-window__input-with-icon {
+  margin-top: 7px;
+}
+
 .tsp-stretch-skew-window__number_input::ng-deep .tsp-text-input {
-  width: 41px;
+  width: 58px;
+}
+
+.tsp-stretch-skew-window__number_input::ng-deep .tsp-input-label {
+  margin-right: 11px;
 }
 
 .tsp-stretch-skew-window__number_input {
@@ -12,8 +20,9 @@
 }
 
 .tsp-stretch-skew-window__fieldset {
-  padding-right: 84px;
+  padding-right: 35px;
   padding-bottom: 7px;
+  margin: 0px;
 }
 
 .tsp-stretch-skew-window__angle-buttons {
@@ -23,7 +32,8 @@
 .tsp-stretch-skew-window__big-icon {
   width: 32px;
   height: 32px;
-  margin-right: 34px;
+  margin-right: 18px;
+  margin-left: 8px;
 }
 
 .tsp-stretch-skew-window__big-icon--stretch-horizontal {
