--- a/ts-paint/src/styles.less
+++ b/ts-paint/src/styles.less
@@ -133,6 +133,10 @@ div.tsp-button {
   margin: 4px 4px 0 12px;
 }
 
+.tsp-input-label--after-field {
+  margin-left: 6px;
+}
+
 .tsp-text-input {
   padding-bottom: 5px;
   padding-left: 2px;
