--- a/ts-paint/src/app/components/stretch-skew-window/stretch-skew-window.component.html
+++ b/ts-paint/src/app/components/stretch-skew-window/stretch-skew-window.component.html
@@ -10,22 +10,24 @@
       <div class="tsp-vertical-bar">
         <fieldset class="tsp-stretch-skew-window__fieldset">
           <legend>Stretch</legend>
-          <div class="tsp-horizontal-bar">
+          <div class="tsp-horizontal-bar tsp-stretch-skew-window__input-with-icon">
             <div class="tsp-stretch-skew-window__big-icon tsp-stretch-skew-window__big-icon--stretch-horizontal"></div>
             <tsp-integer-input
               #stretchHorizontalInput
-              class="tsp-attributes-window__dimension_input"
+              class="tsp-stretch-skew-window__number_input tsp-can-grow"
               [label]="'Horizontal:'"
+              [unit]="'%'"
               [maxValue]="1600"
               [(value)]="stretchHorizontal"
             >
             </tsp-integer-input>
           </div>
-          <div class="tsp-horizontal-bar">
+          <div class="tsp-horizontal-bar tsp-stretch-skew-window__input-with-icon">
             <div class="tsp-stretch-skew-window__big-icon tsp-stretch-skew-window__big-icon--stretch-vertical"></div>
             <tsp-integer-input
-              class="tsp-attributes-window__dimension_input"
+              class="tsp-stretch-skew-window__number_input tsp-can-grow"
               [label]="'Vertical:'"
+              [unit]="'%'"
               [maxValue]="1600"
               [(value)]="stretchVertical"
             >
