Added options to fillTypePicker, changes propagated back to store

--- a/ts-paint/src/app/components/drawing-tool-options/drawing-tool-options.component.html
+++ b/ts-paint/src/app/components/drawing-tool-options/drawing-tool-options.component.html
@@ -1,3 +1,6 @@
 <div class="tsp-depressed-item-container tsp-drawing-tool-options__container">
-  <tsp-fill-type-picker></tsp-fill-type-picker>
+  <tsp-fill-type-picker
+    *ngIf="displayedPicker==='fillTypePicker'"
+    [selectedFillType]="selectedFillType"
+    (selectedFillTypeChange)="changeSelectedFillType($event)"></tsp-fill-type-picker>
 </div>
