--- a/ts-paint/src/app/components/fill-type-picker/fill-type-picker.component.html
+++ b/ts-paint/src/app/components/fill-type-picker/fill-type-picker.component.html
@@ -1,1 +1,6 @@
-TODO
+<div
+  *ngFor="let fillType of availableFillTypes"
+  class="tsp-fill-type-picker__option"
+  [ngClass]="getNgClass(fillType)"
+  (click)="selectFillType(fillType)"
+></div>
