--- a/ts-paint/src/app/components/fill-type-picker/fill-type-picker.component.less
+++ b/ts-paint/src/app/components/fill-type-picker/fill-type-picker.component.less
@@ -2,3 +2,13 @@
 
 :host(tsp-fill-type-picker) {
 }
+
+.tsp-fill-type-picker__option {
+  width: 35px;
+  height: 18px;
+  margin: 1px 0px;
+}
+
+.tsp-fill-type-picker__option--selected {
+  background-color: @color--dark-blue;
+}
