--- a/ts-paint/src/app/components/drawing-tool-options/drawing-tool-options.component.less
+++ b/ts-paint/src/app/components/drawing-tool-options/drawing-tool-options.component.less
@@ -6,6 +6,7 @@
 
 .tsp-drawing-tool-options__container {
   margin-top: 3px;
-  width: 39px;
-  height: 64px;
+  width: 35px;
+  height: 60px;
+  padding: 2px;
 }
