--- a/ts-paint/src/app/components/drawing-tool-options/drawing-tool-options.component.less
+++ b/ts-paint/src/app/components/drawing-tool-options/drawing-tool-options.component.less
@@ -7,6 +7,6 @@
 .tsp-drawing-tool-options__container {
   margin-top: 3px;
   width: 35px;
-  height: 60px;
-  padding: 2px;
+  height: 62px;
+  padding: 1px 2px;
 }
