Fixed Prettier settings and ran it on all files
Prettier got broken after a VS Code update: https://github.com/microsoft/vscode/issues/108447

--- a/ts-paint/src/app/components/drawing-tool-options/drawing-tool-options.component.html
+++ b/ts-paint/src/app/components/drawing-tool-options/drawing-tool-options.component.html
@@ -1,6 +1,7 @@
 <div class="tsp-depressed-item-container tsp-drawing-tool-options__container">
   <tsp-fill-type-picker
-    *ngIf="displayedPicker==='fillTypePicker'"
+    *ngIf="displayedPicker === 'fillTypePicker'"
     [selectedFillType]="selectedFillType"
-    (selectedFillTypeChange)="changeSelectedFillType($event)"></tsp-fill-type-picker>
+    (selectedFillTypeChange)="changeSelectedFillType($event)"
+  ></tsp-fill-type-picker>
 </div>
